# pool_backend

./: .gitignore  Dockerfile  backend.cpp  meson.build
src/block/header/: difficulty_declaration.hpp  header.hpp  view.hpp
src/crypto/: hasher_sha256.hpp
src/crypto/verushash/: verus_clhash_port.hpp  verushash.cpp  verushash.hpp
src/general/: with_uint64.hpp
trezor-crypto/include/: sha2.hpp
trezor-crypto/src/: sha2.cpp
